--- a/Project/Public/CreateProject.html
+++ b/Project/Public/CreateProject.html
@@ -18,7 +18,7 @@
             <a href="#" class="sidebar-link" data-target="help"><span class="icon">❓</span> Help</a>
         </div>
 
-        <!-- User Account Section  -->
+        <!-- User Account -->
         <div class="account">
             <a href="#" id="accountBtn" class="account-link">
         <span class="icon">🟢</span> <span>User</span>
@@ -172,7 +172,7 @@
                 <p>If you have any questions or run into issues, feel free to contact the support team.</p>
             </div>
 
-       <!-- Account Setting Section --> 
+       <!-- Account Setting --> 
         <div id="account" class="container">
             <h2>Your Profile</h2>
              <p>You are signed in with your Google account.</p>
